Upgrade dependencies with major impact (registry-core 4.0.0 development)